fix: align prop v center

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
 .prop.h {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .prop div:first-child {
